# InvestMindAI

./: .coverage  .env_old  README.md  docker-compose.yml  manage.py  pyproject.toml
django_email_auth/: __init__.py
django_email_auth/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_email_auth/accounts/migrations/: 0001_initial.py
django_email_auth/config/: settings.py  urls.py  wsgi.py
models/: based_crypto_trading.py  best_model_breakout.h5  best_model_direction.h5  best_model_price.h5  binance_parser.py  days_level.py  days_level_visualizer.py  edvanced_crypto_trading.py  filtred_signals.py  model_1.py  model_2.py  my_neural_network_model.keras  signals_trading.py  yahoo_btc_analyze.py
models/model/: pyvenv.cfg
models/models/: pyvenv.cfg
notebooks/: kline_test.py  kriptoparser.py  watchlist.html  watchlist.py  Тикеры крипты топ.txt
